part1/e_1.12/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: persistentdata
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-app
          image: desipeli/dwk-todo-app:1.12
